--- a/PUP Website/style.css
+++ b/PUP Website/style.css
@@ -453,7 +453,7 @@ nav .fa-solid {
 
 .graduate-programs h5 {
     font-size: 18px;
-    padding: 15px;
+    padding-bottom: 18px;
     letter-spacing: 1px;
 }
 
@@ -882,6 +882,7 @@ nav .fa-solid {
 
 .blog-left img {
     width: 90%;
+    border-radius: 5px;
 }
 
 .blog-left h2 {
@@ -900,10 +901,11 @@ nav .fa-solid {
 }
 
 .blog-right h3 {
-    background: #f44336;
+    background: maroon;
     color: #fff;
     padding: 7px 0;
     font-size: 16px;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -914,6 +916,7 @@ nav .fa-solid {
     color: #555;
     box-sizing: border-box;
     padding: 8px;
+    background: #f0f0f0;
 }
 
 .comment-box {
@@ -976,7 +979,7 @@ nav .fa-solid {
 
 .contact-col div .fa-solid {
     font-size: 28px;
-    color: #f44336;
+    color: maroon;
     margin: 10px;
     margin-right: 30px;
 }
@@ -1001,4 +1004,63 @@ nav .fa-solid {
     border-radius: 5px;
     box-sizing: border-box;
     background: #f0f0f0;
+}
+
+/* ABOUT II content */
+
+.about2-nav {
+    flex: 1;
+    background-color: maroon;
+    height: 100%;
+    padding: 0;
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+}
+
+.about2-nav ul {
+    display: flex;
+    gap: 20px; 
+    padding: 0; 
+    margin: 0;
+}
+
+.about2-nav ul li {
+    list-style: none;
+    padding: 10px 20px; 
+    margin: 0;
+}
+
+.about2-nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 13px;
+    transition: all 0.3s ease-in-out;
+}
+
+.about2-nav ul li a::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: #fff;
+    display: block;
+    margin: auto;
+    transition: all 0.3s ease-in-out;
+}
+
+.about2-nav ul li:hover a::after {
+    width: 100%;
+}
+
+@media (max-width: 724px) { 
+    .about2-nav ul {
+        display: grid; 
+        grid-template-columns: repeat(4, auto);
+        justify-content: center; 
+        align-items: center; 
+        gap: 5px;
+    }
+    .about2-nav {
+        justify-content: center; 
+    }
 }
