--- a/PUP Website/style.css
+++ b/PUP Website/style.css
@@ -424,6 +424,7 @@ nav .fa-solid {
     margin-bottom: 20px;
     text-transform: uppercase;
     letter-spacing: 1px;
+    color: white;
 }
 
 .college ul {
@@ -1019,15 +1020,17 @@ nav .fa-solid {
 }
 
 .about2-nav ul {
-    display: flex;
     gap: 20px; 
     padding: 0; 
     margin: 0;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
 }
 
 .about2-nav ul li {
     list-style: none;
     padding: 10px 20px; 
+    text-align: center;
     margin: 0;
 }
 
@@ -1063,4 +1066,74 @@ nav .fa-solid {
     .about2-nav {
         justify-content: center; 
     }
+}
+
+.about2-content {
+    margin: 0 50px 0 50px;
+    padding: 20px;
+}
+
+.about2-content h3 {
+    font-size: 23px;
+    font-weight: 600;
+    padding: 20px 0 20px 0;
+}
+
+.about2-content h3, h4 {
+    color: maroon;
+}
+
+.about2-content p {
+    color: #555;
+}
+
+.vision-title, .tagline-title {
+    color: #555;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.strategic-goals {
+    padding: 30px 0 20px 0;
+}
+
+.strategic-goals h4 {
+    padding: 20px 0 20px 0;
+}
+
+.core-values h3 {
+  margin-bottom: 10px; 
+  color: maroon; 
+}
+
+.core-values table {
+  width: 100%;
+  border-collapse: collapse; 
+}
+
+.core-values th,
+.core-values td {
+  border: 2px solid maroon; 
+  padding: 8px; 
+  text-align: center;
+}
+
+.core-values thead {
+  background-color: #f2f2f2; 
+}
+
+.core-values thead th {
+  font-weight: bold; 
+  color: maroon;
+  font-size: 20px;
+}
+
+.core-values td ul {
+  list-style-type: disc; 
+  padding-left: 20px; 
+  text-align: left; 
+}
+
+.corevalues td,tr:hover {
+    color: orangered;
 }
